[gd_scene load_steps=5 format=3 uid="uid://cblcde1ujfpq6"]

[ext_resource type="Script" path="res://Scenes/arrow_tower.gd" id="1_wy7yx"]
[ext_resource type="Texture2D" uid="uid://86nknvi7y4b2" path="res://Assets/image/crossbow/crossbow-loaded.png" id="2_ectkc"]
[ext_resource type="AudioStream" uid="uid://b8cky65ucmxlh" path="res://Assets/Sounds/arrow_shot.wav" id="3_hntmf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0jg8f"]

[node name="ArrowTower" type="Area2D"]
script = ExtResource("1_wy7yx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_0jg8f")
debug_color = Color(0.945098, 0.0705882, 0.552941, 0.419608)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-1, 0)
rotation = 3.14159
texture = ExtResource("2_ectkc")

[node name="FireRateTimer" type="Timer" parent="."]

[node name="ArrowShotAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_hntmf")

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="FireRateTimer" to="." method="_on_fire_rate_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
